fixes for help tab on mobile ui

--- a/src/components/responsive.css
+++ b/src/components/responsive.css
@@ -1078,4 +1078,8 @@
   .dp-dp-box select {
     background-color: var(--main-background-color) !important;
   }
+
+  #faq {
+    overflow: auto;
+  }
 }
